--- a/main.html
+++ b/main.html
@@ -10,7 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<ol data-ns-test='shoppingList'>
+	<li>Iphone</li>
+	<li>car</li>
+	<li>Macbook</li>
+</ol>
+	<ul data-ns-test='holidayList'>
+		<li>Durgapuja</li>
+		<li>Diwali</li>
+		<li>Christmas</li>
+	</ul>
 </body>
 
 </html>
