--- a/main.html
+++ b/main.html
@@ -10,15 +10,15 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<ol data-ns-test='shoppingList'>
-	<li>Iphone</li>
-	<li>car</li>
-	<li>Macbook</li>
+<ol >
+	<li data-ns-test='shoppingList'>Iphone</li>
+	<li data-ns-test='shoppingList'>car</li>
+	<li data-ns-test='shoppingList'>Macbook</li>
 </ol>
-	<ul data-ns-test='holidayList'>
-		<li>Durgapuja</li>
-		<li>Diwali</li>
-		<li>Christmas</li>
+	<ul >
+		<li data-ns-test="holidayList">Bali, Indonesia</li>
+    <li data-ns-test="holidayList">Santorini, Greece</li>
+    <li data-ns-test="holidayList">Kyoto, Japan</li>
 	</ul>
 </body>
 
